vue_element 布局,按钮 菜单,图标,vuex, vue-router ,登录窗口,后台业务页面路由跳转.

--- a/Django_Server/app01/templates/app01/index.html
+++ b/Django_Server/app01/templates/app01/index.html
@@ -81,7 +81,7 @@
 
         <ul style="list-style-type: none;padding: 5px;margin: 10px auto;width:300px">
             <li><a href="javascript:void(0)" onclick="getdata()">测试 Get 获取数据</a></li>
-            <li><a href="javascript:void(0)" onclick="submitdata()">测试 Post 发送数据</a></li>
+            <li><a href="javascript:void(0)" onclick="postdata()">测试 Post 发送数据</a></li>
         </ul>
         <div id="resdata" style="margin: 10px auto;background: lightgray;border-radius: 5px;max-width: 700px">
 
@@ -127,7 +127,7 @@
             },1000)*/
         }
 
-        function submitdata() {
+        function postdata() {
 
             try {
                 get_token()
